Fix overflow

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 html, body {
     max-width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
